[package]
name = "subtp"
version = "0.1.0"
edition = "2021"
authors = ["Mochineko <t.o.e.4315@gmail.com>"]
rust-version = "1.75"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A parser for subtitle files such as the SubRip Subtitle (.srt) and the WebVTT (.vtt)."
documentation = "https://docs.rs/subtp"
repository = "https://github.com/mochi-neko/subtp"
categories = ["parser-implementations", "parsing", "multimedia"]
keywords = ["parser", "subrip", "webvtt"]

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "^0.8"
thiserror = "^1.0"

[dev-dependencies]
anyhow = "1.0.79"
